# digiEduHack_hackathon

./: .env.example  .gitignore  .gitmodules  42 Prague 14112025.pptx  CLAUDE.md  Caddyfile  DATA_FLOW.md  DATA_FLOW_DIAGRAM.md  README.md  a.json  admin-dashboard.html  admin-login.html  clear_storage.py  docker-compose.yml  index.html  main.py  pyproject.toml  rag_demo.sqlite3  requirements.txt  school-dashboard.html  school-login.html  school-upload.html  server.py  style.css
ai/: Caddyfile
data/: metadata.db  (+1 more)
src/backend/: Dockerfile  README.md  pyproject.toml
src/backend/data/: RSSZ-Hl-m-Praha.jsonld
src/backend/migrations/versions/: 0bddfede6f33_migration_for_model_apikeys.py  5dd07ae9b4b9_migration_for_model_apilogs.py  6a070a3f0028_migration_for_model_apilogs.py  a3b0fbc291c4_init_table_for_all_the_core_model.py  a9f3e8a0776f_migration_for_model_apilogs.py  add_transcripts_and_cultural_analysis_tables.py
src/backend/scripts/: create_tables.py
src/backend/swx_api/app/config/: settings.py
src/backend/swx_api/app/controllers/: api_keys_controller.py  api_logs_controller.py
src/backend/swx_api/app/middleware/: api_key_middleware.py  api_log_middleware.py
src/backend/swx_api/app/models/: api_keys.py  api_logs.py  cultural_analysis.py  ingestion_models.py  transcript.py
src/backend/swx_api/app/repositories/: api_keys_repository.py  api_logs_repository.py
src/backend/swx_api/app/routes/: analytics_route.py  config_route.py  ingestion_route.py  schools_route.py  search_route.py  transcripts_route.py
src/backend/swx_api/app/services/: analytics_service.py  api_keys_service.py  api_logs_service.py  audio_ingestion_service.py  cultural_analysis_service.py  data_quality_service.py  ingestion_service.py  llm_client.py  metadata_validator.py  nlp_service.py  recommendations_service.py  region_insights_service.py  response_utils.py  sample_data.py  schools_service.py  search_service.py  transcript_db_service.py  unified_response_service.py
src/backend/swx_api/core/: background_task.py  main.py  router.py
src/backend/swx_api/core/cli/: main.py
src/backend/swx_api/core/config/: settings.py
src/backend/swx_api/core/controllers/: language_controller.py
src/backend/swx_api/core/database/: db_seed.py  db_setup.py  languages.json
src/backend/swx_api/core/middleware/: cors_middleware.py  redis_session_middleware.py
src/backend/swx_api/core/models/: common.py  language.py  user.py
src/backend/swx_api/core/repositories/: language_repository.py
src/backend/swx_api/core/routes/access/: auth_route.py  oauth_route.py
src/backend/swx_api/core/security/: dependencies.py
src/backend/swx_api/core/services/: language_service.py
src/backend/swx_api/core/utils/: domain_router.py  redis_session.py  tone_utils.py
(+547 files in other folders)
